   "Dependencies" fields for any package which is not native to the
   distribution. If any such package is present, tag the report with
   "third-party-packages" in data/general-hooks/generic.py. (LP: #927912)
 - apport/packaging.py: Add get_uninstalled_package() method as a helper method
   for the test suite. Use it instead of a hardcoded Debian/Ubuntu specific
   name in test/test_hooks.py.

1.93 (2012-02-23):
------------------
Bug fixes:
 - apport-gtk: Fix crash on nonexisting icon. Thanks Evan Dandrea.
   (LP: #937354)
 - ui.py, open_url(): Revert back to calling sudo instead of dropping
   privileges ourselves; with the latter, calling firefox as the sudo'ing user
   fails. (LP: #916810, #938128)
 - ui.py: Fix aborting with "AssertionError" if the report is already known,
   but without an URL. (LP: #938778)
 - launchpad.py: If a bug is already known, but the report is private, do not
   send the report. There is little sense piling up lots of duplicates.
   (LP: #938700)
 - test/crash: Fix regression of test_crash_apport(), consider $TERM a
   non-sensitive variable.
 - ui.py: Fix test failures for data collection progress, they are not expected
   to happen for "ProblemType: Crash" any more (happens in the background
   during sending, or if user clicks on "Show Details").
 - test/hooks: Use a package from Debian/Ubuntu main, so that this works better
   during package builds on build servers.
 - test/python: Do not assume that /var/crash/ exists. Use /var/tmp/ for the
   fake binaries instead.
 - data/general-hooks/parse_segv.py: Fix test case name.
 - ui.py: Fix crash on invalid core dumps. (LP: #937215)
 - launchpad.py: Fix crash on unicode report titles. (LP: #896626)

Improvements:
 - apport-gtk: Show the most interesting fields first in the details view.
 - do-release: Call pyflakes and abort on errors other than unused imports.
 - Move all test suites out of the code modules into test/test_<module>.py.